# roxbot

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  ci_script.sh  index.html  init_container.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tasks.py
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: build-images.yml  deploy-mkdocs.yml  release.yml  requirements-docs.txt
blog/: index.html
code_reference/: index.html
contributing/: index.html
docker/: Dockerfile.ci  requirements.txt
docker/ci/: Dockerfile  requirements.txt
docker/dev/: Dockerfile  requirements.txt
docker/mkdocs/: Dockerfile  build.sh  config.sh  requirements.txt
docs/: .authors.yml  code_reference.md  contributing.md  index.md
docs/examples/: adapters.md  bridges.md  jupyter_ui.md  line_follower.md  nodes.md
docs/posts/: line_follower.md  repository_setup.md
docs/reference/: bridges.md  interfaces.md
examples/: README.md  mqtt_logger.py  node.py  node_system.py
examples/01_line_follower/: README.md
examples/adapters/: index.html  mqtt_adapter_example.py  start_mosquitto.sh  test_commands.sh
examples/bridges/: mqtt_bridge_example.py  test_commands.sh
examples/jupyter_ui/: README.md  data_generator.py  listener.py
examples/line_follower/: README.md  diff_drive.ipynb  index.html
examples/nodes/: index.html
examples/snippets/: design_principles.py  udp_plot.py
reference/adapters/: index.html
reference/interfaces/: index.html
search/: search_index.json
src/: README.md
src/roxbot/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  interfaces.py  node.py  nodes.py  utils.py  vectors.py  (+1 more)
tests/: test_bridge.py  test_diffdrive.py  test_interfaces.py  test_main.py  test_mock_gps.py  test_models.py  test_mqtt_adapter.py  test_mqtt_bridge.py  test_node.py  test_smoke.py  test_vectors.py
(+39 files in other folders)
