#-----------------pyproject.toml configuration----------------
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roxbot"
version = "2.4.0"
description = "Pythonic robotics toolkit"
authors = [
    {name = "ROX Automation", email = "dev@roxautomation.com"},
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiomqtt",
    "click",
    "coloredlogs",
    "numpy",
    "orjson",
    "pydantic-settings",
    "pydantic",
    "rox-vectors",
    "pymap3d"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://example.com/roxbot"

[project.scripts]
roxbot = "roxbot.cli:cli"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio"
]

[tool.hatch.metadata.hooks.from-filesystem]
packages = {include = ["roxbot"], from = "src"}


#--------------mypy configuration----------------
[tool.mypy]
# Global options can be specified here
disallow_untyped_defs = true
ignore_missing_imports = true


#-----------------pytest configuration----------------
[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:dateutil.*"

log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"

#-----------------coverage configuration----------------
[tool.coverage.run]
omit = [
    "tests/*",
    "src/roxbot/cli.py",
    "src/roxbot/version.py",
]
